spacing issues

--- a/src/pages/operator/css/Operator.css
+++ b/src/pages/operator/css/Operator.css
@@ -128,7 +128,7 @@
     column-gap: 10px;
     justify-content: center;
     padding-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     margin-bottom: 5px;
 }
 
